# 2025_GROUP_5

./: .gitignore  .gitignore.txt  CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList_8cpp.html  ModelPartList_8cpp__incl.map  ModelPartList_8cpp__incl.md5  ModelPartList_8h.html  ModelPartList_8h.js  ModelPartList_8h__dep__incl.map  ModelPartList_8h__dep__incl.md5  ModelPartList_8h__incl.map  ModelPartList_8h__incl.md5  ModelPartList_8h_source.html  ModelPart_8cpp.html  ModelPart_8cpp__incl.map  ModelPart_8cpp__incl.md5  ModelPart_8h.html  ModelPart_8h.js  ModelPart_8h__dep__incl.map  ModelPart_8h__dep__incl.md5  ModelPart_8h__incl.map  ModelPart_8h__incl.md5  ModelPart_8h_source.html  README.md  README_8md.html  VRRenderThread.cpp  VRRenderThread.h  VRRenderThread_8cpp.html  VRRenderThread_8cpp__incl.map  VRRenderThread_8cpp__incl.md5  VRRenderThread_8h.html  VRRenderThread_8h.js  VRRenderThread_8h__dep__incl.map  VRRenderThread_8h__dep__incl.md5  VRRenderThread_8h__incl.map  VRRenderThread_8h__incl.md5  VRRenderThread_8h_source.html  (+313 more)
.github/workflows/: doxygen-deploy.yml
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
docs/: Doxyfile  README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  (+18 more)
src/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  VRRenderThread.cpp  VRRenderThread.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui
website/: Doxyfile  _model_part_8cpp.html  _model_part_8cpp__incl.dot  _model_part_8h.html  _model_part_8h.js  _model_part_8h__dep__incl.dot  _model_part_8h__incl.dot  _model_part_8h_source.html  _model_part_list_8cpp.html  _model_part_list_8cpp__incl.dot  _model_part_list_8h.html  _model_part_list_8h.js  _model_part_list_8h__dep__incl.dot  _model_part_list_8h__incl.dot  _model_part_list_8h_source.html  annotated.html  annotated_dup.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_main_window__coll__graph.dot  class_main_window_a132f0e713c1a2e43662407ad9858f933_cgraph.dot  class_main_window_a132f0e713c1a2e43662407ad9858f933_icgraph.dot  class_main_window_a143bb60757a3e3f88e208eedb2af7539_cgraph.dot  class_main_window_a143bb60757a3e3f88e208eedb2af7539_icgraph.dot  class_main_window_a3a4866823ec0a9148c03ade962e65cf3_cgraph.dot  class_main_window_a3efc38e6be895f53a3f973906e4174b8_cgraph.dot  class_main_window_a3efc38e6be895f53a3f973906e4174b8_icgraph.dot  class_main_window_a86443ea744fda3e9bad328c2fd1c3d6b_icgraph.dot  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.dot  class_main_window_a996c5a2b6f77944776856f08ec30858d_icgraph.dot  class_main_window_aa2a5945f9c4bf90022f0a7ad3db34c49_cgraph.dot  class_main_window_aa2a5945f9c4bf90022f0a7ad3db34c49_icgraph.dot  class_main_window_ad3d17973d3111f1ba9805217b6ab58cf_cgraph.dot  class_main_window_aff47be4b5045aefc0d9f4d66dea15d29_cgraph.dot  class_main_window_aff47be4b5045aefc0d9f4d66dea15d29_icgraph.dot  class_model_part-members.html  class_model_part.html  class_model_part.js  class_model_part_a05bc0dd06a3658d9a2c46fa717dec910_cgraph.dot  (+90 more)
website/search/: all_0.js  all_4.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_1.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  searchdata.js
worksheet6_autogen/include_Debug/EWIEGA46WW/: moc_ModelPartList.cpp.d  moc_VRRenderThread.cpp.d  moc_mainwindow.cpp.d  moc_optiondialog.cpp.d
